# portfolio_chat

./: .env.example  .gitignore  ARCHITECTURE.md  README.md  SECURITY.md  pyproject.toml  requirements-dev.txt  requirements.txt
context/hobbies/: first_robotics.md  hobbies.md  volunteering.md
context/meta/: about_chat.md  contact.md
context/philosophy/: problem_solving.md  professional_ethos.md  professional_philosophy.md  values.md
context/professional/: achievements.md  resume.md  skills.md
context/projects/: great-minds-summary.md  inflation-dashboard-rag-summary.md  overview.md  portfolio_rag_summary.md  portfolio_site.md  talking_rock.md  talking_rock_rag_summary.md  ukraine-osint-rag-summary.md
prompts/: intent_parser.md  jailbreak_classifier.md  revision_prompt.md  safety_checker.md  system_prompt.md
src/portfolio_chat/: __init__.py  config.py  server.py
tests/: __init__.py  conftest.py
tests/e2e/: __init__.py  test_pipeline_e2e.py
tests/integration/: __init__.py  test_api.py  test_golden_paths.py  test_pipeline.py
tests/security/: __init__.py  test_injection.py  test_rate_limit_security.py
tests/simulation/: __init__.py  analysis.py  db.py  engine.py  profiles.py  replay.py  run.py
tests/unit/: __init__.py  test_config.py  test_contact_storage.py  test_context.py  test_conversation.py  test_layer0_network.py  test_layer2_jailbreak.py  test_layer3_intent.py  test_layer5_semantic.py  test_layer6_generate.py  test_layer7_revise.py  test_layer8_safety.py  test_ollama_client.py  test_orchestrator.py  test_rate_limit.py  test_response_quality.py  test_router.py  test_sanitize.py  test_tools.py
tests/utils/: __init__.py  factories.py  helpers.py
(+40 files in other folders)
